fix mainspace color dark mode

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -85,7 +85,7 @@
     --header-color: #323232;
     --header-title-color: #4a4a4a;
     --selection-color: #9fa8da;
-    --mainspace-color: #212529;
+    --mainspace-color:rgb(25,25,25);
     --backdrop-color: black;
     --focus-color: #90caf9;
     --light-gray: lightgray;
